--- a/index.html
+++ b/index.html
@@ -10,10 +10,5 @@
 </head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="https://janasathya.github.io/Hideshow1/inline.bundle.js"></script>
-  <script type="text/javascript" src="https://janasathya.github.io/Hideshow1/polyfills.bundle.js"></script>
-  <script type="text/javascript" src="https://janasathya.github.io/Hideshow1/styles.bundle.js"></script>
-  <script type="text/javascript" src="https://janasathya.github.io/Hideshow1/vendor.bundle.js"></script>
-  <script type="text/javascript" src="https://janasathya.github.io/Hideshow1/main.bundle.js"></script>
-  </body>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 </html>
